fixed sticky nav on mobile with padding change

--- a/main.css
+++ b/main.css
@@ -71,7 +71,8 @@ img {
     margin: 0 auto; /* Centers the container  */
     display: flex;
     flex-wrap: wrap; /* Allows items to wrap onto new lines */
-    padding: 10px;
+    padding-left: 10px;
+    padding-right: 10px;
     
     
   }
@@ -125,7 +126,9 @@ img {
         padding-top: 36px;
         padding-right: 36px;
     }      */
-   
+   .container{
+   padding: 0px;
+   }
     #footer {                 
         text-align: left;
         padding-left: 0;
